Fix table hover problem since it's too light to see

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
 .row {
   margin: 30px;
 }
+.table-hover > tbody > tr:hover {
+  background-color: #D2D2D2;
+}
